logs/Slang/generated/yosys/asicworld_code_hdl_models_decoder_2to4_gates.sv.log
name: asicworld_code_hdl_models_decoder_2to4_gates
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_decoder_2to4_gates.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_decoder_2to4_gates.v:7:1: error: expected member
not i1 (n1,x);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_decoder_2to4_gates.v:8:1: error: expected member
not i2 (n2,y);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_decoder_2to4_gates.v:9:1: error: expected member
and a1 (f0,n1,n2);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_decoder_2to4_gates.v:10:1: error: expected member
and a2 (f1,n1,y);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_decoder_2to4_gates.v:11:1: error: expected member
and a3 (f2,x,n2);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_decoder_2to4_gates.v:12:1: error: expected member
and a4 (f3,x,y);
^~~
